fixed offscreen content on small screens

--- a/src/css/openbookswap.css
+++ b/src/css/openbookswap.css
@@ -900,5 +900,6 @@ a.powered-by-openbookswap:hover {
 
     div.swap-container.openbookswap {
         min-width: -webkit-fill-available;
+        max-width: -webkit-fill-available;
     }
 }
